New photo + writing through news summaries myself

--- a/2025/2025-09-28-wir.md
+++ b/2025/2025-09-28-wir.md
@@ -1,38 +1,38 @@
 # TKTK
 ## TKTK
 
-![Closeup of typewriter letters](https://w3w.news/img/csabi-elter-unsplash-3000.jpg)
-*Photo by Csabi Elter via [Unsplash](https://unsplash.com/@bulgakovmihaly)*
+![iPhone email app icon, with badge showing 6 unread messages](https://w3w.news/img/email-chuttersnap-unsplash-3000.jpg)
+*Photo by CHUTTERSNAP via [Unsplash](https://unsplash.com/@chuttersnap)*
 
 <hr>
 
+<!--
+
 - _**Before we begin, a big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
-- _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
-
 - _**I'm also happy to highlight our affiliate,** award-winning designer Kate Zimina of [Roobinium](https://dribbble.com/roobinium). To get Kate's help on your next web3 project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
+
+-->
+
+- _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
 
 <hr>
 
 **Lead item goes here.** Yadda yadda yadda
 
+<!-- CTA on Substack -> HubSpot migration. -->
+
 ### Week in Review: Sept. 21-27, 2025
 
-- A7, a sanctions-evasion firm linked to a ruble-backed stablecoin, is reportedly facilitating Russian influence in Moldovan elections through crypto payments to politicians and activist networks, according to leaked texts and on-chain data. The findings suggest covert Russian involvement, though direct ties to the Kremlin remain unproven. ([BeInCrypto](https://finance.yahoo.com/news/russia-reportedly-uses-crypto-influence-224145166.html)) <!-- Draft summary item by Leo/Llama 3.1 8B -->
+- **Token prices tumbled** as traders [unwound leveraged positions](https://www.bitget.com/news/detail/12560604990180). Worries about the U.S. economy and the expiration of listed options contracts Friday fueled the selloff. Bitcoin tumbled more than 5% to a new one-month low, and ether was off 10% for the week. Meanwhile, the most old-school financial safe haven of all benefited from traders' newly cautious mood: Gold jumped nearly 4%, nearing its first-ever close above [$4,000 per ounce](https://www.kitco.com/news/article/2025-09-24/4000-gold-real-possibility-literally-millions-ounces-still-be-purchased) in New York trading.
 
-- **Moody’s warned** that the rapid growth of crypto adoption in emerging markets—particularly in everyday uses like savings and remittances—could undermine monetary sovereignty and weaken financial resilience. The report highlighted stablecoins pegged to the U.S. dollar as a key concern, noting their potential to erode the effectiveness of domestic currencies and monetary policy, with global crypto ownership climbing to about 562 million people in 2024, up 33% from the prior year. ([CoinDesk](https://www.coindesk.com/policy/2025/09/26/crypto-adoption-in-emerging-markets-poses-risks-to-financial-resilience-moody-s)) <!-- Draft news summary by ChatGPT -->
+- **But over the longer term, crypto's performance still looks impressive.** Bitcoin is up more than 75% over the last 12 months, including a 16% gain in 2025 so far. Those gains have pushed the number of crypto millionaires up 40%, and crypto billionaires up 29% globally over the last 12 months, according to a [new report](https://www.henleyglobal.com/publications/crypto-wealth-report-2025#contributors) by the consulting firm Henley & Partners.
 
-- China has reportedly asked brokers to pause real-world asset business in Hong Kong, according to sources, as part of efforts to address concerns around the virtual asset sector. This move comes amid growing scrutiny of the rapidly evolving crypto and digital asset landscape in the region. ([Reuters](https://www.reuters.com/legal/government/china-ask-brokers-pause-real-world-asset-business-hong-kong-sources-say-2025-09-23/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Moody’s warned** that the rapid growth of crypto adoption in emerging markets — particularly for everyday use cases like savings and remittances — could undermine monetary sovereignty and weaken financial resilience. In particular, the report highlighted adoption of stablecoins pegged to the U.S. dollar as a key concern, noting their potential to erode the effectiveness of domestic currencies and monetary policy. ([CoinDesk](https://www.coindesk.com/policy/2025/09/26/crypto-adoption-in-emerging-markets-poses-risks-to-financial-resilience-moody-s))
 
+- **China's Securities Regulatory Commission** advised some brokerages in Hong Kong to pause tokenizing real-world assets (RWAs) for clients. ([Reuters](https://www.reuters.com/legal/government/china-ask-brokers-pause-real-world-asset-business-hong-kong-sources-say-2025-09-23/))
 
-
-
-
-
-
-- **Dealwatch:** SoftBank Group and Ark Invest are reportedly in discussions to participate in a major funding round for Tether, which could value the stablecoin issuer at up to $500 billion, as the company seeks to raise $15–20 billion for a 3% equity stake. This development could further solidify Tether’s position in mainstream finance.([Decrypt](https://decrypt.co/341639/tether-investors-funding-round-softbank-ark-report)) <!-- Draft summary item by Leo/Llama 3.1 8B --> | US regulators are investigating potential insider trading related to stock movements before companies announced their cryptocurrency and treasury strategies, according to a report by the Wall Street Journal. This probe highlights growing scrutiny over financial disclosures and market integrity in the evolving crypto landscape. ([Wall Street Journal](https://www.wsj.com/finance/regulation/sec-crypto-treasury-deal-trading-21d631ae?st=NDypyo&reflink=desktopwebshare_permalink)) <!-- Draft summary item by Leo/Llama 3.1 8B --> | Kraken is in talks with a strategic investor to raise $200 million to $300 million at a $20 billion valuation ahead of its planned IPO in early 2026, according to Bloomberg. The move comes as the crypto exchange expands its operations and prepares for a potential public offering amid a growing convergence of digital assets and traditional financial markets. ([The Block](https://www.theblock.co/post/372627/kraken-mulls-potential-investor-at-20-billion-valuation-ahead-of-planned-ipo-bloomberg)) <!-- Draft summary item by Leo/Llama 3.1 8B --> | Struggling crypto-hoarding companies are turning to share buybacks in an attempt to boost their stock prices, signaling the potential end of the "crypto treasury" trend as some firms face declining valuations and market saturation. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE0yNVZZRE56eGdsUzk0azZCc3diMElsTFUwRnZfZTdCQ25zbXRUNTh2R1J1QVlHNTNMTmlWVkRrR2t1N0RsUWhRYTlmdW1uY2pxZHQtbWVUZG9rVzlSd1RCTDJnejJEUXdzY1NTcFVpM2Q?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- **Token prices tumbled.** Major cryptocurrencies, including Bitcoin, Ethereum, and Dogecoin, plummeted in value, with liquidations exceeding $1 billion in a 24-hour period. The decline is attributed to a combination of factors, including a drop in the stock market and a decrease in institutional investment, with analysts predicting that interest rate cuts could potentially benefit Bitcoin and other risk assets in the future. ([Decrypt](https://finance.yahoo.com/news/bitcoin-ethereum-dogecoin-dive-crypto-174803031.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> Gold up 6 weeks in a row. <!-- Link TK --> | Bitcoin, XRP, and Ethereum prices continued their decline ahead of the release of the Federal Reserve's preferred inflation measure, the PCE data, which could influence future interest rate decisions and impact crypto markets. The potential outcome of the data—whether it shows higher or lower inflation—could either deepen the slump or provide a catalyst for a rebound in digital assets. ([Barron's](https://www.barrons.com/articles/bitcoin-price-xrp-ethereum-crypto-slump-b7bff44d)) <!-- Draft summary item by Leo/Llama 3.1 8B --> |  The number of crypto millionaires and billionaires has surged by 40% and 29%, respectively, driven largely by Bitcoin's 78% price increase over the past year, according to a new report by Henley & Partners. This growth highlights the expanding role of cryptocurrency in global wealth creation and institutional adoption. ([Decrypt](https://decrypt.co/340890/more-crypto-millionaires-billionaires-ever-before-bitcoin-boom)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **The analytics firm Elliptic** said that leaked data from businesses controlled by Moldovan founder Ilan Shor shed new light on those companies' role in [facilitating Russian interference](https://www.elliptic.co/blog/the-a7-leaks-the-role-of-crypto-in-russian-sanctions-evasion-and-election-interference) in Moldova's elections [this weekend](https://apnews.com/video/moldovans-head-to-polls-in-election-plagued-by-claims-of-russian-interference-219394cef2cf4d0bb1a89a92b2cb22d7). In particular, Elliptic says crypto wallets associated with Shor's company A7 have received $8 billion in stablecoin transactions over the past 18 months, much of it used to manage and pay a network of political activists in Moldova.
 
 ### Market Snapshot
 
@@ -58,9 +58,9 @@
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/GC%3DF?p=GC%253DF">Gold</a></td>
-      <td>$3,789.80/oz</td>
-      <td>+3.2%</td>
-      <td>+44.1%</td>
+      <td>$3,809/oz</td>
+      <td>+3.7%</td>
+      <td>+44.9%</td>
     </tr>        
     <tr>
       <td><a href="https://finance.yahoo.com/quote/DX-Y.NYB?p=DX-Y.NYB&.tsrc=fin-srch">USD Index</a></td>
@@ -82,25 +82,24 @@
     </tr>
     <tr>
       <td><a href="https://www.msci.com/indexes/index/899901">MSCI All-Country <br>World Index (ex US)</a></td>
-      <td>1,048.99</td>
+      <td>1,048.35</td>
       <td>-0.7%</td>
       <td>+25.1%</td>
     </tr>
   </tbody>
-</table>
+</table>			
 
 ### Looking Ahead
 
-- Ethereum co-founder Vitalik Buterin highlights the upcoming Fusaka hard fork, scheduled for December 3, 2025, as a pivotal upgrade that could significantly boost Ethereum’s scalability and bring it closer to mainstream adoption through innovations like PeerDAS. This upgrade aims to address data bottlenecks, reduce transaction costs, and pave the way for a more accessible decentralized future. ([CCN](https://finance.yahoo.com/news/vitalik-buterin-says-fusaka-could-094715641.html)) <!-- Draft summary item by Leo/Llama 3.1 8B -->
+- **SoftBank Group and Ark Invest** are reportedly in discussions to participate in a major funding round for Tether that would value the stablecoin issuer Tether at $500 billion, making it one of the largest privately held companies in the world. ([Decrypt](https://decrypt.co/341639/tether-investors-funding-round-softbank-ark-report))
 
-- Web3's growth depends on strategic integration with existing Web2 systems rather than replacing them, as highlighted by Richard Johnson of Data Guardians Network, who argues that leveraging Web2's established infrastructure can help overcome barriers to mass adoption and drive innovation. ([Cointelegraph](https://cointelegraph.com/news/web3-rely-on-web2)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Ethereum co-founder Vitalik Buterin** says the network's upcoming Fusaka upgrade, scheduled for December, could put Ethereum on a path to becoming "truly mainstream" by solving several nettlesome scalability issues. ([CCN](https://finance.yahoo.com/news/vitalik-buterin-says-fusaka-could-094715641.html))
 
-- **Turnabout is fair play.** Travel sites like Booking.com, Expedia, and Airbnb, which once put scores of human travel agents out of business, are now working to avoid being replaced themselves by AI agents. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE9nc2tGV0tieE1aZFplam9tNW81WWMydGV3UHVicnZ6bTExcXQ0TFN4dll3NjBsYUtGUGI4Q3lWdVlpa29XQUtFMUdNRDB5WVBvRkJ6bGYtd2dINWY2NThySW82SnQ0aVJ6VnMya1d6WS0?hl=en-US&gl=US&ceid=US%3Aen))
+- **Richard Johnson, COO of Data Guardians Network,** advocates that web3 organiztions [integrate with web2 platforms](https://cointelegraph.com/news/web3-rely-on-web2) rather than trying to replace them outright. The more collaborative approach would be better for public perception and user growth, which have otherwise been elusive for web3, Johnson says. Hmmm...
 
 ### Odds & Ends
 
-- A new modular construction company, Reframe, is revolutionizing urban housing by building apartments in just a week using factory-assembled modules, significantly reducing construction time and costs compared to traditional methods. This approach could offer a scalable and efficient solution to the ongoing housing crisis, particularly in cities where construction has become increasingly slow and expensive. ([Slate](https://slate.com/business/2025/09/modular-housing-apartments-boston-reframe.html)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
+- **Reframe, a Massachusetts-based construction startup,** is trying to seize America's current housing crunch as an opportunity to popularize modular assembly of factory-made homes. Such tech has long been a favorite of architects and other design nerds, but it has previously failed to gain wide adoption. In one Boston project, Reframe says it's taking a few days to assemble a three-story house that would likely take over a year to build using conventional processes. ([Slate](https://slate.com/business/2025/09/modular-housing-apartments-boston-reframe.html))
 
 - **A new study suggests** that even a single exercise session could slow the growth of cancer cells. ([Washington Post](https://www.washingtonpost.com/wellness/2025/09/11/exercise-cancer-benefits-prevention-recurrence/))
 
@@ -109,33 +108,3 @@ _**That's it for now. Thanks for reading the newsletter today! If you want to kn
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
-
-
-
-
-
-<!--
-
-Other candidates
-
-- **ICYMI:** Basketball star and Coinbase investor Kevin Durant recently regained access to a crypto wallet hosted by the exchange that he's been locked out of since 2016. At the time, he used the wallet to buy bitcoin around $650 per token. It's since risen 17,700%. ([CoinDesk](https://www.coindesk.com/business/2025/09/20/kevin-durant-recovers-bitcoin-bought-at-usd650-now-up-over-17-700-after-nearly-a-decade))
-
-- **TikTok deal:** President Donald Trump signed an executive order allowing the sale of a controlling stake in TikTok's U.S. operations to a group of American investors, valued at $14 billion, in a deal that aims to keep the app available to U.S. users while ensuring their data is protected from foreign influence. ([Variety](https://variety.com/2025/digital/news/trump-executive-order-tiktok-us-sale-deal-1236529242/)) <!-- Draft news summary by Leo/Llama 3.1 8B  | TikTok's US business is at the center of a proposed $14 billion sale, with experts arguing that the price tag is undervalued, citing the app's lucrative revenue and popularity. The deal, backed by President Donald Trump, would carve out TikTok's US operations into a new joint venture, reducing ByteDance's stake to below 20% and addressing national security concerns. ([Business Standard](https://www.business-standard.com/world-news/tiktok-us-sale-trump-vance-14bn-valuation-bytedance-125092600734_1.html)) <!-- Draft news summary by Leo/Llama 3.1 8B  | A fifth of U.S. adults now regularly get news on TikTok, with the platform seeing a sharp increase in news consumption, especially among younger users—43% of adults under 30 rely on TikTok for news, up from 9% in 2020. ([Pew Research](https://www.pewresearch.org/short-reads/2025/09/25/1-in-5-americans-now-regularly-get-news-on-tiktok-up-sharply-from-2020/)) <!-- Draft news summary by Leo/Llama 3.1 8B
-
-- CZ is boosting Aster. https://www.theblock.co/post/371690/rebranded-aster-perps-dex-squares-up-against-hyperliquid-following-cz-endorsement | Denies his new company is raising outside capital. https://www.theblock.co/post/372018/binance-co-founder-changpeng-zhao-refutes-claim-yzi-labs-will-take-on-outside-capital | CoinDesk says otherwise https://www.coindesk.com/business/2025/09/23/binance-founder-cz-considers-opening-yzi-labs-to-external-investors-ft
-
-- Buterin praises Base's approach as an L-2: https://decrypt.co/340895/ethereum-founder-vitalik-buterin-base-doing-things-right-way
-
-- **Stablecoins:** |  Moody's warning on stablecoins. | ICYMI Coinbase launched on-chain USDC lending: https://www.theblock.co/post/371281/coinbase-usdc-onchain-lending | Plasma launching new mainnet for stablecoins: https://finance.yahoo.com/news/plasma-launch-mainnet-beta-blockchain-160836427.html | https://www.theblock.co/post/371568/plasma-stablecoin-neobank ([]())
-
-- Aussie SOL treasury company secures 100m credit line: https://www.theblock.co/post/371941/first-australian-solana-treasury-fitell-corporation-secures-100-million-credit-line
-
-| Early-week selloff in tokens: https://finance.yahoo.com/news/new-rout-in-bitcoin-ripples-through-crypto-world-145312563.html <!-- Check for updates  
-
-| Morgan Stanley partnering with ETrade <!-- Link TK Precious metals outperforming crypto across the board. https://www.coindesk.com/markets/2025/09/23/not-just-gold-silver-platinum-and-other-precious-metals-are-all-stealing-bitcoin-s-thunder-in-2025
-
-- ShapeShift settled with OFAC: https://decrypt.co/340917/shuttered-shapeshift-settles-sanctions-violations-750k
-
-- WazirX intvu: https://finance.yahoo.com/news/blockchain-scales-netflix-trust-industry-134605530.html
-
--->
