--- a/2025/2025-09-28-wir.md
+++ b/2025/2025-09-28-wir.md
@@ -18,9 +18,28 @@
 
 <hr>
 
-**Lead item goes here.** Yadda yadda yadda
+Crypto treasury companies are hitting
 
-<!-- CTA on Substack -> HubSpot migration. -->
+- US regulators are investigating potential insider trading related to stock movements before companies announced their cryptocurrency and treasury strategies, according to a report by the Wall Street Journal. This probe highlights growing scrutiny over financial disclosures and market integrity in the evolving crypto landscape. ([Wall Street Journal](https://www.wsj.com/finance/regulation/sec-crypto-treasury-deal-trading-21d631ae?st=NDypyo&reflink=desktopwebshare_permalink))
+
+- Struggling crypto-hoarding companies are turning to share buybacks in an attempt to boost their stock prices, signaling the potential end of the "crypto treasury" trend as some firms face declining valuations and market saturation. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE0yNVZZRE56eGdsUzk0azZCc3diMElsTFUwRnZfZTdCQ25zbXRUNTh2R1J1QVlHNTNMTmlWVkRrR2t1N0RsUWhRYTlmdW1uY2pxZHQtbWVUZG9rVzlSd1RCTDJnejJEUXdzY1NTcFVpM2Q?hl=en-US&gl=US&ceid=US%3Aen))
+
+<!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+
+
+- Kraken is in talks with a strategic investor to raise $200 million to $300 million at a $20 billion valuation ahead of its planned IPO in early 2026, according to Bloomberg. The move comes as the crypto exchange expands its operations and prepares for a potential public offering amid a growing convergence of digital assets and traditional financial markets. ([The Block](https://www.theblock.co/post/372627/kraken-mulls-potential-investor-at-20-billion-valuation-ahead-of-planned-ipo-bloomberg)) <!-- Draft summary item by Leo/Llama 3.1 8B  
+
+
+- **TikTok deal:** President Donald Trump signed an executive order allowing the sale of a controlling stake in TikTok's U.S. operations to a group of American investors, valued at $14 billion, in a deal that aims to keep the app available to U.S. users while ensuring their data is protected from foreign influence. ([Variety](https://variety.com/2025/digital/news/trump-executive-order-tiktok-us-sale-deal-1236529242/)) <!-- Draft news summary by Leo/Llama 3.1 8B  
+
+- TikTok's US business is at the center of a proposed $14 billion sale, with experts arguing that the price tag is undervalued, citing the app's lucrative revenue and popularity. The deal, backed by President Donald Trump, would carve out TikTok's US operations into a new joint venture, reducing ByteDance's stake to below 20% and addressing national security concerns. ([Business Standard](https://www.business-standard.com/world-news/tiktok-us-sale-trump-vance-14bn-valuation-bytedance-125092600734_1.html)) <!-- Draft news summary by Leo/Llama 3.1 8B  
+
+- A fifth of U.S. adults now regularly get news on TikTok, with the platform seeing a sharp increase in news consumption, especially among younger users—43% of adults under 30 rely on TikTok for news, up from 9% in 2020. ([Pew Research](https://www.pewresearch.org/short-reads/2025/09/25/1-in-5-americans-now-regularly-get-news-on-tiktok-up-sharply-from-2020/)) <!-- Draft news summary by Leo/Llama 3.1 8B
+
+- CZ is boosting Aster. https://www.theblock.co/post/371690/rebranded-aster-perps-dex-squares-up-against-hyperliquid-following-cz-endorsement | Denies his new company is raising outside capital. https://www.theblock.co/post/372018/binance-co-founder-changpeng-zhao-refutes-claim-yzi-labs-will-take-on-outside-capital | CoinDesk says otherwise https://www.coindesk.com/business/2025/09/23/binance-founder-cz-considers-opening-yzi-labs-to-external-investors-ft
+
+
 
 ### Week in Review: Sept. 21-27, 2025
 
