Writing through lead item

--- a/2025/2025-09-28-wir.md
+++ b/2025/2025-09-28-wir.md
@@ -1,61 +1,38 @@
-# TKTK
-## TKTK
+# Heads up
+## TKTKTK
 
 ![iPhone email app icon, with badge showing 6 unread messages](https://w3w.news/img/email-chuttersnap-unsplash-3000.jpg)
 *Photo by CHUTTERSNAP via [Unsplash](https://unsplash.com/@chuttersnap)*
 
-<hr>
+**Through the end of the year,** I'm going to be making some changes to w3w, including workflow, the newsletter's publishing [stack](https://www.upwork.com/resources/what-is-a-software-stack), and editorial focus.
 
-<!--
+The general idea is that a publication like this has to evolve right along with the tech that I'm writing about, and that many of w3w's readers are involved in creating firsthand.
 
-- _**Before we begin, a big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
+In that spirit, I think we're overdue to tweak a few things at this point. Of course, I'll be sure to update you as I go, to be as transparent as possible.
 
-- _**I'm also happy to highlight our affiliate,** award-winning designer Kate Zimina of [Roobinium](https://dribbble.com/roobinium). To get Kate's help on your next web3 project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
+Some priorities offhand:  
 
--->
+- Ratcheting down w3w's reliance on centralized platforms even more.
+- Getting more global in coverage.
+- Getting somewhat more technical.
 
-- _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
+**Related to that first item, one immediate challenge:** Our days on Substack are likely numbered at this point. It strikes me they are increasingly coming to resemble a full-fledged social network, not merely an email distribution solution. And that was never what I wanted to sign up for, literally or figuratively.
 
-<hr>
+As an alternative, I'm definitely inclined to move toward full self-hosting of newsletter content by year-end. But I'm still working to identify the best solution for handling subscription signups and storing user emails, with an eye toward keeping everyone's addresses at least as secure as they currently are on Substack, if not moreso. (You can check out a very preliminary chat I just had with ChatGPT to identify possible Substack alternatives [here](https://chatgpt.com/share/68d9c4c8-4384-8013-b3c9-79cec0dc99e2).)
 
-Crypto treasury companies are hitting
-
-- US regulators are investigating potential insider trading related to stock movements before companies announced their cryptocurrency and treasury strategies, according to a report by the Wall Street Journal. This probe highlights growing scrutiny over financial disclosures and market integrity in the evolving crypto landscape. ([Wall Street Journal](https://www.wsj.com/finance/regulation/sec-crypto-treasury-deal-trading-21d631ae?st=NDypyo&reflink=desktopwebshare_permalink))
-
-- Struggling crypto-hoarding companies are turning to share buybacks in an attempt to boost their stock prices, signaling the potential end of the "crypto treasury" trend as some firms face declining valuations and market saturation. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE0yNVZZRE56eGdsUzk0azZCc3diMElsTFUwRnZfZTdCQ25zbXRUNTh2R1J1QVlHNTNMTmlWVkRrR2t1N0RsUWhRYTlmdW1uY2pxZHQtbWVUZG9rVzlSd1RCTDJnejJEUXdzY1NTcFVpM2Q?hl=en-US&gl=US&ceid=US%3Aen))
-
-<!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-
-
-- Kraken is in talks with a strategic investor to raise $200 million to $300 million at a $20 billion valuation ahead of its planned IPO in early 2026, according to Bloomberg. The move comes as the crypto exchange expands its operations and prepares for a potential public offering amid a growing convergence of digital assets and traditional financial markets. ([The Block](https://www.theblock.co/post/372627/kraken-mulls-potential-investor-at-20-billion-valuation-ahead-of-planned-ipo-bloomberg)) <!-- Draft summary item by Leo/Llama 3.1 8B  
-
-
-- **TikTok deal:** President Donald Trump signed an executive order allowing the sale of a controlling stake in TikTok's U.S. operations to a group of American investors, valued at $14 billion, in a deal that aims to keep the app available to U.S. users while ensuring their data is protected from foreign influence. ([Variety](https://variety.com/2025/digital/news/trump-executive-order-tiktok-us-sale-deal-1236529242/)) <!-- Draft news summary by Leo/Llama 3.1 8B  
-
-- TikTok's US business is at the center of a proposed $14 billion sale, with experts arguing that the price tag is undervalued, citing the app's lucrative revenue and popularity. The deal, backed by President Donald Trump, would carve out TikTok's US operations into a new joint venture, reducing ByteDance's stake to below 20% and addressing national security concerns. ([Business Standard](https://www.business-standard.com/world-news/tiktok-us-sale-trump-vance-14bn-valuation-bytedance-125092600734_1.html)) <!-- Draft news summary by Leo/Llama 3.1 8B  
-
-- A fifth of U.S. adults now regularly get news on TikTok, with the platform seeing a sharp increase in news consumption, especially among younger users—43% of adults under 30 rely on TikTok for news, up from 9% in 2020. ([Pew Research](https://www.pewresearch.org/short-reads/2025/09/25/1-in-5-americans-now-regularly-get-news-on-tiktok-up-sharply-from-2020/)) <!-- Draft news summary by Leo/Llama 3.1 8B
-
-- CZ is boosting Aster. https://www.theblock.co/post/371690/rebranded-aster-perps-dex-squares-up-against-hyperliquid-following-cz-endorsement | Denies his new company is raising outside capital. https://www.theblock.co/post/372018/binance-co-founder-changpeng-zhao-refutes-claim-yzi-labs-will-take-on-outside-capital | CoinDesk says otherwise https://www.coindesk.com/business/2025/09/23/binance-founder-cz-considers-opening-yzi-labs-to-external-investors-ft
-
-
+If anyone has ideas of your own about such a solution for email, please do let me know by dropping a message directly to met at peter[at]w3w[dot]news. Ditto if you don't want me to store your address on any service other than Substack, or if there are any specific email options you would find unacceptable.
 
 ### Week in Review: Sept. 21-27, 2025
 
 - **Token prices tumbled** as traders [unwound leveraged positions](https://www.bitget.com/news/detail/12560604990180). Worries about the U.S. economy and the expiration of listed options contracts Friday fueled the selloff. Bitcoin tumbled more than 5% to a new one-month low, and ether was off 10% for the week. Meanwhile, the most old-school financial safe haven of all benefited from traders' newly cautious mood: Gold jumped nearly 4%, nearing its first-ever close above [$4,000 per ounce](https://www.kitco.com/news/article/2025-09-24/4000-gold-real-possibility-literally-millions-ounces-still-be-purchased) in New York trading.
-
 - **But over the longer term, crypto's performance still looks impressive.** Bitcoin is up more than 75% over the last 12 months, including a 16% gain in 2025 so far. Those gains have pushed the number of crypto millionaires up 40%, and crypto billionaires up 29% globally over the last 12 months, according to a [new report](https://www.henleyglobal.com/publications/crypto-wealth-report-2025#contributors) by the consulting firm Henley & Partners.
-
 - **Moody’s warned** that the rapid growth of crypto adoption in emerging markets — particularly for everyday use cases like savings and remittances — could undermine monetary sovereignty and weaken financial resilience. In particular, the report highlighted adoption of stablecoins pegged to the U.S. dollar as a key concern, noting their potential to erode the effectiveness of domestic currencies and monetary policy. ([CoinDesk](https://www.coindesk.com/policy/2025/09/26/crypto-adoption-in-emerging-markets-poses-risks-to-financial-resilience-moody-s))
-
 - **China's Securities Regulatory Commission** advised some brokerages in Hong Kong to pause tokenizing real-world assets (RWAs) for clients. ([Reuters](https://www.reuters.com/legal/government/china-ask-brokers-pause-real-world-asset-business-hong-kong-sources-say-2025-09-23/))
-
 - **The analytics firm Elliptic** said that leaked data from businesses controlled by Moldovan founder Ilan Shor shed new light on those companies' role in [facilitating Russian interference](https://www.elliptic.co/blog/the-a7-leaks-the-role-of-crypto-in-russian-sanctions-evasion-and-election-interference) in Moldova's elections [this weekend](https://apnews.com/video/moldovans-head-to-polls-in-election-plagued-by-claims-of-russian-interference-219394cef2cf4d0bb1a89a92b2cb22d7). In particular, Elliptic says crypto wallets associated with Shor's company A7 have received $8 billion in stablecoin transactions over the past 18 months, much of it used to manage and pay a network of political activists in Moldova.
 
 ### Market Snapshot
 
-*A quick look at some major indicators as of Friday's close on Wall Street:* <!-- Gold and MSCI quotes are preliminary for now, need updating prior to final publication.-->
+*A quick look at some major indicators as of Friday's close on Wall Street:*
 
 <table>
 
@@ -111,18 +88,17 @@ Crypto treasury companies are hitting
 ### Looking Ahead
 
 - **SoftBank Group and Ark Invest** are reportedly in discussions to participate in a major funding round for Tether that would value the stablecoin issuer Tether at $500 billion, making it one of the largest privately held companies in the world. ([Decrypt](https://decrypt.co/341639/tether-investors-funding-round-softbank-ark-report))
-
 - **Ethereum co-founder Vitalik Buterin** says the network's upcoming Fusaka upgrade, scheduled for December, could put Ethereum on a path to becoming "truly mainstream" by solving several nettlesome scalability issues. ([CCN](https://finance.yahoo.com/news/vitalik-buterin-says-fusaka-could-094715641.html))
-
 - **Richard Johnson, COO of Data Guardians Network,** advocates that web3 organiztions [integrate with web2 platforms](https://cointelegraph.com/news/web3-rely-on-web2) rather than trying to replace them outright. The more collaborative approach would be better for public perception and user growth, which have otherwise been elusive for web3, Johnson says. Hmmm...
 
 ### Odds & Ends
 
 - **Reframe, a Massachusetts-based construction startup,** is trying to seize America's current housing crunch as an opportunity to popularize modular assembly of factory-made homes. Such tech has long been a favorite of architects and other design nerds, but it has previously failed to gain wide adoption. In one Boston project, Reframe says it's taking a few days to assemble a three-story house that would likely take over a year to build using conventional processes. ([Slate](https://slate.com/business/2025/09/modular-housing-apartments-boston-reframe.html))
-
 - **A new study suggests** that even a single exercise session could slow the growth of cancer cells. ([Washington Post](https://www.washingtonpost.com/wellness/2025/09/11/exercise-cancer-benefits-prevention-recurrence/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
+
+_**Please note, I regularly use several AI apps to assist production of w3w. But the final edit is 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub.**_
 
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
