Adding a subhed, with an assist from Copilot

--- a/2025/2025-09-28-wir.md
+++ b/2025/2025-09-28-wir.md
@@ -1,5 +1,5 @@
 # Heads up
-## TKTKTK
+## A note to readers about w3w's next chapter
 
 ![iPhone email app icon, with badge showing 6 unread messages](https://w3w.news/img/email-chuttersnap-unsplash-3000.jpg)
 *Photo by CHUTTERSNAP via [Unsplash](https://unsplash.com/@chuttersnap)*
@@ -8,7 +8,7 @@
 
 The general idea is that a publication like this has to evolve right along with the tech that I'm writing about, and that many of w3w's readers are involved in creating firsthand.
 
-In that spirit, I think we're overdue to tweak a few things at this point. Of course, I'll be sure to update you as I go, to be as transparent as possible.
+In that spirit, I think we're overdue to tweak a few things. Of course, I'll be sure to update you as I go, to be as transparent as possible.
 
 Some priorities offhand:  
 
@@ -16,11 +16,11 @@ Some priorities offhand:
 - Getting more global in coverage.
 - Getting somewhat more technical.
 
-**Related to that first item, one immediate challenge:** Our days on Substack are likely numbered at this point. It strikes me they are increasingly coming to resemble a full-fledged social network, not merely an email distribution solution. And that was never what I wanted to sign up for, literally or figuratively.
+**Related to that first item, one immediate challenge:** Our days on Substack are likely numbered at this point. It strikes me they are increasingly coming to resemble a full-fledged social network, not merely an email distribution platform. And that was never what I wanted to sign up for, literally or figuratively.
 
 As an alternative, I'm definitely inclined to move toward full self-hosting of newsletter content by year-end. But I'm still working to identify the best solution for handling subscription signups and storing user emails, with an eye toward keeping everyone's addresses at least as secure as they currently are on Substack, if not moreso. (You can check out a very preliminary chat I just had with ChatGPT to identify possible Substack alternatives [here](https://chatgpt.com/share/68d9c4c8-4384-8013-b3c9-79cec0dc99e2).)
 
-If anyone has ideas of your own about such a solution for email, please do let me know by dropping a message directly to met at peter[at]w3w[dot]news. Ditto if you don't want me to store your address on any service other than Substack, or if there are any specific email options you would find unacceptable.
+If anyone has ideas of your own about such a solution for email, please do let me know by dropping a message directly to me at peter[at]w3w[dot]news. Ditto if you don't want me to store your address on any service other than Substack, or if there are any specific email options you would find unacceptable.
 
 ### Week in Review: Sept. 21-27, 2025
 
